--- a/PFT/Views/Home/Budgets.cshtml
+++ b/PFT/Views/Home/Budgets.cshtml
@@ -2,6 +2,6 @@
     ViewData["Title"] = "PFT - Budgets";
 }
 
-<div class="text-center">
+<div class="content">
     <h1 class="display-4">Budgets</h1>
 </div>
