--- a/PFT/Views/Home/Settings.cshtml
+++ b/PFT/Views/Home/Settings.cshtml
@@ -2,6 +2,6 @@
     ViewData["Title"] = "PFT - Settings";
 }
 
-<div class="text-center">
+<div class="content">
     <h1 class="display-4">Settings</h1>
 </div>
