--- a/PFT/Views/Home/Transactions.cshtml
+++ b/PFT/Views/Home/Transactions.cshtml
@@ -2,6 +2,6 @@
     ViewData["Title"] = "PFT - Transactions";
 }
 
-<div class="text-center">
+<div class="content">
     <h1 class="display-4">Transactions</h1>
 </div>
