--- a/PFT/Views/Home/Index.cshtml
+++ b/PFT/Views/Home/Index.cshtml
@@ -5,3 +5,8 @@
 <div class="text-center">
     <h1 class="display-4">Personal Finance Tracker</h1>
 </div>
+
+<div id="NetWorthContainer">
+<h2>Net worth</h2>
+<p>Your financial net worth is calculated by subtracting all debts from all your posessions (investments, house, cash etc)</p>
+</div>
