--- a/PFT/Views/Shared/_Layout.cshtml
+++ b/PFT/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PFT.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Investments.css" />
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <header>
@@ -32,7 +34,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Investments" asp-action="Investments">Investments</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Debts">Debts</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Debts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Settings">Settings</a>
