--- a/PFT/Views/Investments/_InvestmentTablePartial.cshtml
+++ b/PFT/Views/Investments/_InvestmentTablePartial.cshtml
@@ -5,7 +5,7 @@
         <h3>Latest update time: @Model.LatestUpdateTime</h3>
         <h3>Total portfolio value: $@Model.GetPortfolioValue()</h3>
     </div>
-    <div class="InvestmentCategory">
+    <div class="investment-category">
         <h3>ETFs</h3>
         <table>
             <tbody>
@@ -51,7 +51,7 @@
 </div>
 
 
-<div class="InvestmentCategory">
+<div class="investment-category">
     <h3>Stocks</h3>
     <table>
         <tbody>
