Added HTML message to show API calls were exceeded (instead of empty)

--- a/PFT/Views/Investments/_InvestmentTablePartial.cshtml
+++ b/PFT/Views/Investments/_InvestmentTablePartial.cshtml
@@ -74,6 +74,12 @@
             </thead>
                 @foreach (KeyValuePair<string, InvestmentWrapper> entry in Model.GetInvestments())
                 {
+                    if (string.IsNullOrEmpty(entry.Value.StockData.Name))
+                    {
+                        <td>Exceeded API calls. Try again later.</td>
+                        continue;
+                    }
+
                     if (entry.Value.CachedData.Type != InvestmentType.Stock)
                         continue;
 
