--- a/PFT/Views/Shared/_Layout.cshtml
+++ b/PFT/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PFT.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Dashboard.css" />
     <link rel="stylesheet" href="~/css/Investments.css" />
     @RenderSection("Styles", required: false)
 </head>
